web-infras/parser/tests/fixtures/babel/core/uncategorised/459/output.txt
[SyntaxError]: label not found. (1,22)
1|while (true) { break x; }
 |                    ^
